Fix unable to delete extensions continuously through keyboard

Changes:
(1) revert the cl in Issue 2451323002.
(2) using a different approach, which is to avoid restorefocusedview call if desktopnativewidget is not active (since that should be handled in HandleActivationChanged call).

BUG=665380
TEST=manual test see bug fixed.
Also, this reverts the cl in Issue 2451323002, checked that the bug in that issue is not regressed.

Review-Url: https://codereview.chromium.org/2517663002
Cr-Commit-Position: refs/heads/master@{#433706}

Former-commit-id: 34ce9a4718f571b8f8ee0f95b6d153aff38223db